--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,6 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: helvetica;
-    overflow:hidden;
 }
 
 .hidden {
@@ -61,15 +60,14 @@ object {
 
 .send {
     background-color:transparent;
-    width:10%;
     position:fixed;
     height: 48px; 
     bottom:0%;
-    margin-left:91%; 
+    margin-left:75%; 
     padding:5px;
 }
 
-input {
+.c-input {
     background-color:transparent;
     border:none;
     outline:none;
