--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ html, body {
     border-radius: 200px;
     -moz-border-radius: 200px;
     -webkit-border-radius: 200px;
-    position: absolute;
+    position: fixed;
 }
 
 iframe {
